--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,9 @@
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
         "dmstr/yii2-adminlte-asset": "^2.1",
-        "codemix/yii2-localeurls": "^1.7"
+        "codemix/yii2-localeurls": "^1.7",
+        "mihaildev/yii2-ckeditor": "*",
+        "rmrevin/yii2-fontawesome": "2.10.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
