Сформированы связи для GridView и DetailView в разделе блога (blog, menu)

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,9 @@
         "codemix/yii2-localeurls": "^1.7",
         "mihaildev/yii2-ckeditor": "*",
         "rmrevin/yii2-fontawesome": "2.10.0",
-        "omgdef/yii2-multilingual-behavior": "^2.1"
+        "omgdef/yii2-multilingual-behavior": "^2.1",
+        "kartik-v/yii2-date-range": "dev-master",
+        "2amigos/yii2-date-time-picker-widget": "~1.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
