--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "omgdef/yii2-multilingual-behavior": "^2.1",
         "kartik-v/yii2-date-range": "dev-master",
         "2amigos/yii2-date-time-picker-widget": "~1.0",
-        "marqu3s/yii2-summernote": "dev-master"
+        "marqu3s/yii2-summernote": "dev-master",
+        "valiant/yii2-list-group-widget": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
