--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "kartik-v/yii2-date-range": "dev-master",
         "2amigos/yii2-date-time-picker-widget": "~1.0",
         "marqu3s/yii2-summernote": "dev-master",
-        "valiant/yii2-list-group-widget": "*"
+        "valiant/yii2-list-group-widget": "*",
+        "wbraganca/yii2-dynamicform": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
