Работа над расписанием. Изменён просмотр расписание в frontend. Исправлены баги с созданием расписания в backend. Остаётся доработать создание и обновление расписания.

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "2amigos/yii2-date-time-picker-widget": "~1.0",
         "marqu3s/yii2-summernote": "dev-master",
         "valiant/yii2-list-group-widget": "*",
-        "wbraganca/yii2-dynamicform": "*"
+        "wbraganca/yii2-dynamicform": "*",
+        "kartik-v/yii2-widget-datepicker": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
