--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,10 @@
         "2amigos/yii2-date-time-picker-widget": "~1.0",
         "marqu3s/yii2-summernote": "dev-master",
         "valiant/yii2-list-group-widget": "*",
-        "wbraganca/yii2-dynamicform": "*",
-        "kartik-v/yii2-widget-datepicker": "dev-master"
+        "kartik-v/yii2-widget-datepicker": "dev-master",
+        "yiisoft/yii2-jui": "^2.0",
+        "symfony/dom-crawler": "~3.0",
+        "kidzen/yii2-dynamicform": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
