--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,9 @@
         "kidzen/yii2-dynamicform": "*",
         "kartik-v/yii2-widget-fileinput": "dev-master",
         "wokster/yii2-adminlte-widgets": "*",
-        "yii-dream-team/yii2-upload-behavior": "*"
+        "yii-dream-team/yii2-upload-behavior": "*",
+        "ruskid/yii2-csv-importer": "dev-master",
+        "2amigos/yii2-tinymce-widget": "~1.1"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
